Implement rememberMe functionality
- Implement the rememberMe functionality allowing the user to "login" without needing to enter details even after the JSESSION cookie runs out
- Move the passwordEncoder to a different file as it was creating a circular dependency between WebSecurityConfig and UserServiceImpl
- Implement the checkbox in the frontend